[package]
name = "ply-generator"
version = "0.1.0"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitsetium = "0.0.0"
simple-tiled-wfc = { version = "0.1.0", git = "https://github.com/madwareru/simple-tiled-wfc.git" }
ply-generator-lib = { version = "0.1.0", path = "ply-generator-lib" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
